2024-02-28  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-aliases.el: new file.

	* eev-strange-functions.el: major rewrite.

	* eev-mode.el (eev-mode-map-set): moved `find-efacedescr' from
	`M-h M-s' to `M-h s'; placed `find-strange-function-links' in `M-h
	M-s'.
	(eev-mode-help): updated to mention `find-strange-function-links'.

2024-02-21  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-pdflike.el (ee-code-pdfbackend, ee-code-pdftextbackend):
	added `(setq ee-{c}pdf {fname})'.

2024-02-20  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-wrap.el (ee-needs-quote): new function.
	(ee-add-quote): use `ee-needs-quote'.
	(ee-Q, ee-Qrest): new functions.

	* eev-videolinks.el (find-eev2019video, find-eev2020video)
	(find-eev2021video, find-eev2021bvideo, find-eevnavvideo)
	(find-eevtemplvideo, find-eevfherelvideo, find-eevtestblsvideo)
	(find-eevvlinksvideo, find-oficina20210video)
	(find-oficina2021avideo, find-oficina2021bvideo)
	(find-2021ssrvideo, find-2021workshop1video)
	(find-2021workshop2video, find-2021workshop3video)
	(find-2021workshop4video, find-2021workshop5video)
	(find-2021workshop6video, find-2021orgfornonusersvideo)
	(find-2021ffllvideo, find-2022eevmake0video)
	(find-2022findeevanggvideo, find-2022findelispintrovideo)
	(find-2022pict2eluavideo, find-2022eevwconfigpt1video)
	(find-2022eevwconfigpt2video, find-2022eevwconfigvideo)
	(find-2022yttranscriptvideo, find-2022tikzvideo)
	(find-eev2022klavideo, find-eev2022pyvideo)
	(find-eev2023replsvideo, find-eev2023replsbvideo)
	(find-2024gitvideo, find-2024luasovideo): deleted - all these
	functions are now generated by a single call to
	`(code-1stclassvideos)'.
	(ee-all-cs-with-subs, code-lsubs, find-code-lsubs)
	(ee-code-lsubs, code-all-lsubs, find-code-all-lsubs)
	(ee-code-all-lsubs): deleted - these functions were used to
	generate some of the functions generated by the call to
	`(code-1stclassvideos)'.

	* eev-tlinks.el (ee-find-1stclassvideo-links): rewritten.